// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductCard > matches the available-stock snapshot 1`] = `
<div
  class="rounded-app border border-border-base bg-surface shadow-sm grid min-h-[360px] content-between gap-5 p-5"
>
  <div
    class="grid gap-4"
  >
    <div
      class="flex items-start justify-between gap-3"
    >
      <div
        class="grid gap-1"
      >
        <h2
          class="text-lg font-semibold leading-tight"
        >
          Clear Shield Case
        </h2>
        <p
          class="text-sm text-muted"
        >
          iPhone 15
        </p>
      </div>
      <span
        class="inline-flex min-h-7 items-center rounded-full border px-3 py-1 text-xs font-semibold border-green-200 bg-green-50 text-success"
      >
        8 in stock
      </span>
    </div>
    <p
      class="text-2xl font-bold"
    >
      $49.90
    </p>
  </div>
  <div
    class="grid gap-3 border-t border-border-base pt-4"
  >
    <div
      class="grid gap-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Decrease quantity"
          class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary h-10 w-10 px-0"
          disabled=""
          type="button"
        >
          -
        </button>
        <input
          class="h-10 w-20 rounded-app border border-border-base bg-surface px-3 text-center text-sm font-semibold outline-none focus:border-primary focus:ring-2 focus:ring-blue-100"
          inputmode="numeric"
          max="8"
          min="1"
          step="1"
          type="number"
          value="1"
        />
        <button
          aria-label="Increase quantity"
          class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary h-10 w-10 px-0"
          type="button"
        >
          +
        </button>
      </div>
    </div>
    <button
      class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-primary bg-primary text-white hover:bg-primary-dark focus-visible:ring-primary "
      type="button"
    >
      Checkout
    </button>
  </div>
</div>
`;

exports[`ProductCard > matches the zero-stock snapshot 1`] = `
<div
  class="rounded-app border border-border-base bg-surface shadow-sm grid min-h-[360px] content-between gap-5 p-5"
>
  <div
    class="grid gap-4"
  >
    <div
      class="flex items-start justify-between gap-3"
    >
      <div
        class="grid gap-1"
      >
        <h2
          class="text-lg font-semibold leading-tight"
        >
          Clear Shield Case
        </h2>
        <p
          class="text-sm text-muted"
        >
          iPhone 15
        </p>
      </div>
      <span
        class="inline-flex min-h-7 items-center rounded-full border px-3 py-1 text-xs font-semibold border-red-200 bg-red-50 text-danger"
      >
        Out
      </span>
    </div>
    <p
      class="text-2xl font-bold"
    >
      $49.90
    </p>
  </div>
  <div
    class="grid gap-3 border-t border-border-base pt-4"
  >
    <div
      class="grid gap-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Decrease quantity"
          class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary h-10 w-10 px-0"
          disabled=""
          type="button"
        >
          -
        </button>
        <input
          class="h-10 w-20 rounded-app border border-border-base bg-surface px-3 text-center text-sm font-semibold outline-none focus:border-primary focus:ring-2 focus:ring-blue-100"
          inputmode="numeric"
          max="1"
          min="1"
          step="1"
          type="number"
          value="1"
        />
        <button
          aria-label="Increase quantity"
          class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary h-10 w-10 px-0"
          disabled=""
          type="button"
        >
          +
        </button>
      </div>
    </div>
    <button
      class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-primary bg-primary text-white hover:bg-primary-dark focus-visible:ring-primary "
      disabled=""
      type="button"
    >
      Checkout
    </button>
    <p
      class="text-sm text-muted"
    >
      Stock is currently unavailable.
    </p>
  </div>
</div>
`;
